--- a/index.html
+++ b/index.html
@@ -23,8 +23,17 @@
             <a href="">Projetos</a>
             <a href="">Sobre</a>
             <a href="">Contatos</a>
-            <a id="button" href="" lang="en">Download CV</a>  
+            <a class="button" href="" lang="en">Download CV</a>  
         </nav>  
     </header>
+    <section id="banner">
+        <div id="title">
+            <label id="name">Fernando I. Kobayashi</label> 
+            <label id="expertise">FrontEnd Developer</label>
+           
+        </div>
+        <a class="button btn-download" href="" lang="en">Download CV</a>
+        <a class="button btn-contact" href="">Contatos</a>
+    </section>
 </body>
 </html>
